--- a/aurigami-brand.html
+++ b/aurigami-brand.html
@@ -54,13 +54,14 @@
 
     <!-- Visual Data -->
     <div class="project-image-box">
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <img class="project-image" src="css/img/placeholder.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-01.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-02.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-03.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-04.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-05.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-06.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-07.png"/>
+        <img class="project-image" src="css/img/aurigami-brand/aurigami-brand-page-08.png"/>
     </div>
 
     <div id="next-project-background">
