--- a/aurigami-mascot.html
+++ b/aurigami-mascot.html
@@ -53,10 +53,15 @@
 
     <!-- Visual Data -->
     <div class="project-image-box">
-        <img class="project-image" src="css/img/placeholder.png"/>
-        <video controls loop class="project-image">
-            <source src="css/img/aurigami-mascot/aurigami-mascot-3D.mp4" type="video/mp4"/>
-        </video>
+        <div class="mascot-sticker-box">
+            <img class="mascot-sticker" src="css/img/aurigami-mascot/mascot-sticker-01.png"/>
+            <img class="mascot-sticker" src="css/img/aurigami-mascot/mascot-sticker-02.png"/>
+            <img class="mascot-sticker" src="css/img/aurigami-mascot/mascot-sticker-03.png"/>
+            <img class="mascot-sticker" src="css/img/aurigami-mascot/mascot-sticker-04.png"/>
+            <img class="mascot-sticker" src="css/img/aurigami-mascot/mascot-sticker-05.png"/>
+            <img class="mascot-sticker" src="css/img/aurigami-mascot/mascot-sticker-06.png"/>
+        </div>
+        <img class="project-image" src="css/img/aurigami-mascot/mascot-3d.png"/>
     </div>
 
     <div id="next-project-background">
