--- a/index.html
+++ b/index.html
@@ -10,15 +10,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> 
 
     <link rel="stylesheet" href="css/styles.css"/>
+
+        <script>
+        window.onload = function() {
+            // Check if there's a hash in the URL
+            if (window.location.hash) {
+                // If there is, replace the hash with an empty string
+                window.history.replaceState({}, document.title, window.location.href.split('#')[0]);
+            }
+        };
+
+        function removeHash(){
+            setTimeout(function(){
+                history.replaceState("", document.title, window.location.pathname);
+            }, 1);
+        }
+    </script>
+    
 </head>
 
 <body id="body-background-lavender">
 
     <!-- Navbar -->
     <div id="navbar-bar">
-        <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="index.html#bodybox-works" class="navbar-item glow-small">Work</a>
-        <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
+        <a href="./"><img id="navbar-logo" src="css/img/z.svg"/></a>
+        <a href="./#bodybox-works" onClick="removeHash()" class="navbar-item glow-small">Work</a>
+        <a href="gallery" class="navbar-item glow-small">Gallery</a>
     </div>
 
     <!-- Main Headline -->
@@ -31,8 +48,8 @@
                 <p class="font-color-mauve200">I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company. I bring visual solutions for your needs with my knowledge and skills. Whether I am to manage a role of leadership or to be a cog in a wheel, I will elevate your product or company.</p>              
             </div>
             <div id="headline-buttons">
-                <a href="#bodybox-works"><button class="btn-headline">View Works</button></a>
-                <a href="gallery.html"><button class="btn-headline">Visit Gallery</button></a>
+                <a href="#bodybox-works" onClick="removeHash()"><button class="btn-headline">View Works</button></a>
+                <a href="gallery"><button class="btn-headline">Visit Gallery</button></a>
             </div>
         </div>
     </div>
