--- a/aurigami-mascot.html
+++ b/aurigami-mascot.html
@@ -31,7 +31,7 @@
             <div>
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
-                    <h4 class="project-details">Creative Designer</h4>
+                    <h4 class="project-details">Creative Director</h4>
                     <h4 class="project-details">Marketing Strategy</h4>
                     <h4 class="project-details">Project Initiator</h4>
                 </div>
@@ -43,10 +43,9 @@
         </div>
         <div>
             <div class="project-summary-box">
-                <p class="project-summary mauve200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec venenatis tellus. Nulla eget ex in justo sagittis lacinia sit amet ac ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis non justo sit amet sem mattis porta a id erat. Pellentesque libero odio, varius quis pharetra quis, tempus sit amet dolor. Fusce convallis consectetur lectus quis aliquet. Proin auctor arcu vel facilisis porta. Proin ultrices magna vehicula libero venenatis, ac finibus nisi sodales. Mauris porta luctus risus at pharetra. Aliquam velit augue, sollicitudin nec bibendum quis, luctus id augue.</p>
-                <p class="project-summary mauve200">Mauris pharetra ligula iaculis velit varius scelerisque. Vivamus pretium sapien nec quam auctor elementum. Nam tristique accumsan eros, at faucibus magna efficitur sit amet. Cras condimentum accumsan tellus, nec laoreet est lobortis vel. Maecenas aliquam sapien vel elit vestibulum pulvinar. Cras laoreet turpis odio, sed aliquam enim euismod eu. Etiam vestibulum ante nec leo interdum sagittis. Mauris non sodales orci. Nunc tincidunt gravida erat in dignissim.</p>
-                <p class="project-summary mauve200">Curabitur quis erat finibus, finibus lectus quis, laoreet magna. Phasellus vestibulum mauris sit amet nulla euismod lacinia non in tortor. Etiam ultricies arcu vel nisi molestie fringilla. Integer varius efficitur scelerisque. Suspendisse eu sodales quam. Aliquam scelerisque lobortis ultricies. Fusce vitae nibh ac dui interdum faucibus interdum vitae libero. Curabitur a varius turpis, vel rhoncus massa.</p>
-                <p class="project-summary mauve200">Nam vitae lectus convallis, aliquam lectus eget, consequat odio. Duis maximus lobortis fringilla. Proin tellus libero, elementum vitae efficitur at, placerat sed sapien. Curabitur bibendum risus in lorem consectetur varius. Phasellus iaculis tellus vitae aliquet condimentum. Nam condimentum vitae purus sit amet sodales. Suspendisse malesuada quis neque at tristique. Integer molestie lorem quis lorem fermentum vehicula. Nunc venenatis, metus id facilisis viverra, est tortor finibus ante, vel lacinia nisl elit sed diam. In lacinia, ante sit amet congue congue, eros dui luctus orci, et elementum nulla nibh in diam.</p>
+                <p class="project-summary mauve200">Aurigami is a Decentralised Finance Application (DApp) on the Aurora blockchain. It is a liquidity protocol (LP) that functions as an Automated Money Market (AMM). Users will deposit their assets into the protocol and be rewarded with variable yield (APY) which can be understood as interest. Depositors can then choose to lend and/or borrow assets in an over-collateralised fashion.</p>
+                <p class="project-summary mauve200">Once the branding and redevelopment of the DApp was completed, the protocol sought to foster a deeper connection with its community. Aside from being accessible and supportive on social medias such as Twitter, Discord and Telegram, I proposed introducing a mascot to garner a stronger brand image by giving the protocol a face. The mascot would then be used in social media posters, as stickers in social chat apps and in collaboration with any partners.</p>
+                <p class="project-summary mauve200">Thus, Aurispout was born from a little beansprout; where beansprouts signify growth and renewal. The two little leaves on a beansprout look much like the PLY logomark, which can be seen on little Aurisprout’s head.</p>
             </div>
         </div>
     </div>
