--- a/aurigami-brand.html
+++ b/aurigami-brand.html
@@ -31,10 +31,9 @@
             <div>
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
-                    <h4 class="project-details">Creative Director</h4>
-                    <h4 class="project-details">Digital Product</h4>
-                    <h4 class="project-details">Research</h4>
                     <h4 class="project-details">Project Initiator</h4>
+                    <h4 class="project-details">Creative Director</h4>
+                    <h4 class="project-details">Research</h4>
                 </div>
             </div>
             <div>
@@ -44,10 +43,10 @@
         </div>
         <div>
             <div class="project-summary-box">
-                <p class="project-summary mauve200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec venenatis tellus. Nulla eget ex in justo sagittis lacinia sit amet ac ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis non justo sit amet sem mattis porta a id erat. Pellentesque libero odio, varius quis pharetra quis, tempus sit amet dolor. Fusce convallis consectetur lectus quis aliquet. Proin auctor arcu vel facilisis porta. Proin ultrices magna vehicula libero venenatis, ac finibus nisi sodales. Mauris porta luctus risus at pharetra. Aliquam velit augue, sollicitudin nec bibendum quis, luctus id augue.</p>
-                <p class="project-summary mauve200">Mauris pharetra ligula iaculis velit varius scelerisque. Vivamus pretium sapien nec quam auctor elementum. Nam tristique accumsan eros, at faucibus magna efficitur sit amet. Cras condimentum accumsan tellus, nec laoreet est lobortis vel. Maecenas aliquam sapien vel elit vestibulum pulvinar. Cras laoreet turpis odio, sed aliquam enim euismod eu. Etiam vestibulum ante nec leo interdum sagittis. Mauris non sodales orci. Nunc tincidunt gravida erat in dignissim.</p>
-                <p class="project-summary mauve200">Curabitur quis erat finibus, finibus lectus quis, laoreet magna. Phasellus vestibulum mauris sit amet nulla euismod lacinia non in tortor. Etiam ultricies arcu vel nisi molestie fringilla. Integer varius efficitur scelerisque. Suspendisse eu sodales quam. Aliquam scelerisque lobortis ultricies. Fusce vitae nibh ac dui interdum faucibus interdum vitae libero. Curabitur a varius turpis, vel rhoncus massa.</p>
-                <p class="project-summary mauve200">Nam vitae lectus convallis, aliquam lectus eget, consequat odio. Duis maximus lobortis fringilla. Proin tellus libero, elementum vitae efficitur at, placerat sed sapien. Curabitur bibendum risus in lorem consectetur varius. Phasellus iaculis tellus vitae aliquet condimentum. Nam condimentum vitae purus sit amet sodales. Suspendisse malesuada quis neque at tristique. Integer molestie lorem quis lorem fermentum vehicula. Nunc venenatis, metus id facilisis viverra, est tortor finibus ante, vel lacinia nisl elit sed diam. In lacinia, ante sit amet congue congue, eros dui luctus orci, et elementum nulla nibh in diam.</p>
+                <p class="project-summary mauve200">Aurigami is a Decentralised Finance Application (DApp) on the Aurora blockchain. It is a liquidity protocol (LP) that functions as an Automated Money Market (AMM). Users will deposit their assets into the protocol and be rewarded with variable yield (APY) which can be understood as interest. Depositors can then choose to lend and/or borrow assets in an over-collateralised fashion.</p>
+                <p class="project-summary mauve200">The name <span class="italic">Aurigami </span> is derived from two words: <span class="italic">Origami</span> and <span class="italic">Aurora</span>, with Origami being the Japanese art of paper folding and Aurora being the blockchain the DApp is native to. The protocol is a digital product with any tangible collaterals necessary be mainly for events such as NEARCON and ETHCON. The logomark is used as the icon for their native token PLY. Parking your assets in Aurigami, will fold and mulyiPLY your assets. These descriptions hint that despite the very digital nature of the product, Aurigami wanted a more paper-ish feel to its branding. I achieved this by implementing typical thus, recognisable, origami pattern textures, sharper assets and a little Neomorphism.</p>
+                <p class="project-summary mauve200">The objectives ensued a full logo suite, a standardisation for the developers (internal), formal guidelines for partners and associates (external) and other necessary marketing collaterals. To achieve excellence in this aspect, I conducted brand research for several competitors and partners before fully settling into my proposed branding, which matured into what we see below.</p>
+                <p class="project-summary mauve200">As there were sentiment based reservations regarding the PLY logomark, I perfected its geometry by circumscribing two triangles within a circle. The balanced shape of the logomark can be accredited to the equal angles at the two upper wings due to it being subtended by the same arc. The CEO was happy to see that his PLY logomark was still recognisable rather than implementing an entirely new design. </p>
             </div>
         </div>
     </div>
