--- a/vort3x.html
+++ b/vort3x.html
@@ -31,10 +31,9 @@
             <div>
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
-                    <h4 class="project-details">Print Design</h4>
-                    <h4 class="project-details">Experimental Design</h4>
+                    <h4 class="project-details">Lead Designer</h4>
                     <h4 class="project-details">Research</h4>
-                    <h4 class="project-details">Multipurpose Design</h4>
+                    <h4 class="project-details">Pioneering Template</h4>
                 </div>
             </div>
             <div>
@@ -44,10 +43,10 @@
         </div>
         <div>
             <div class="project-summary-box">
-                <p class="project-summary mauve200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec venenatis tellus. Nulla eget ex in justo sagittis lacinia sit amet ac ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis non justo sit amet sem mattis porta a id erat. Pellentesque libero odio, varius quis pharetra quis, tempus sit amet dolor. Fusce convallis consectetur lectus quis aliquet. Proin auctor arcu vel facilisis porta. Proin ultrices magna vehicula libero venenatis, ac finibus nisi sodales. Mauris porta luctus risus at pharetra. Aliquam velit augue, sollicitudin nec bibendum quis, luctus id augue.</p>
-                <p class="project-summary mauve200">Mauris pharetra ligula iaculis velit varius scelerisque. Vivamus pretium sapien nec quam auctor elementum. Nam tristique accumsan eros, at faucibus magna efficitur sit amet. Cras condimentum accumsan tellus, nec laoreet est lobortis vel. Maecenas aliquam sapien vel elit vestibulum pulvinar. Cras laoreet turpis odio, sed aliquam enim euismod eu. Etiam vestibulum ante nec leo interdum sagittis. Mauris non sodales orci. Nunc tincidunt gravida erat in dignissim.</p>
-                <p class="project-summary mauve200">Curabitur quis erat finibus, finibus lectus quis, laoreet magna. Phasellus vestibulum mauris sit amet nulla euismod lacinia non in tortor. Etiam ultricies arcu vel nisi molestie fringilla. Integer varius efficitur scelerisque. Suspendisse eu sodales quam. Aliquam scelerisque lobortis ultricies. Fusce vitae nibh ac dui interdum faucibus interdum vitae libero. Curabitur a varius turpis, vel rhoncus massa.</p>
-                <p class="project-summary mauve200">Nam vitae lectus convallis, aliquam lectus eget, consequat odio. Duis maximus lobortis fringilla. Proin tellus libero, elementum vitae efficitur at, placerat sed sapien. Curabitur bibendum risus in lorem consectetur varius. Phasellus iaculis tellus vitae aliquet condimentum. Nam condimentum vitae purus sit amet sodales. Suspendisse malesuada quis neque at tristique. Integer molestie lorem quis lorem fermentum vehicula. Nunc venenatis, metus id facilisis viverra, est tortor finibus ante, vel lacinia nisl elit sed diam. In lacinia, ante sit amet congue congue, eros dui luctus orci, et elementum nulla nibh in diam.</p>
+                <p class="project-summary mauve200">VORT3X is a Malaysian creative agency founded in 2013. While they focus on brand identity design, their goals are to create successful brands, campaigns and marketing strategies for their clients. They have worked with several known brands such as Gamuda, EcoWorld, Sunway, Setia and Fave.</p>
+                <p class="project-summary mauve200">Every year, VORT3X creates stunning red packet designs for the Chinese New Years that are sought after by collectors and enthusiasts. Their designs have also been discovered to be bid by resellers on local platforms such as Carousell.</p>
+                <p class="project-summary mauve200">I was tasked with their red packet design for the year of 2021, which was the year of the cow and also the second year into Covid. The theme for the year was the Beijing Opera (visually) and the three Sanxing deities (conceptually). After research into the common bill size of Malaysia, Singapore and Indonesia, I drafted and tested several renditions, where the final print was on sticker paper, finished with silver foil and assembled without sealants but with simple clasps. Cleverly, the name of the Angpao set was titled “Topeng Mooka”, which in Malay, <span class="italic">topeng muka</span> means face mask. The <span class="italic">mu</span> had been substituted for moo for the year of the cow.</p>
+                <p class="project-summary mauve200">The Angpao design features in Sin Chew Newspaper where the snippet is included below.</p>
             </div>
         </div>
     </div>
