--- a/ecoworld.html
+++ b/ecoworld.html
@@ -32,7 +32,7 @@
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
                     <h4 class="project-details">Infographics</h4>
-                    <h4 class="project-details">Digital Product</h4>
+                    <h4 class="project-details">Lead Designer</h4>
                 </div>
             </div>
             <div>
@@ -42,10 +42,8 @@
         </div>
         <div>
             <div class="project-summary-box">
-                <p class="project-summary mauve200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec venenatis tellus. Nulla eget ex in justo sagittis lacinia sit amet ac ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis non justo sit amet sem mattis porta a id erat. Pellentesque libero odio, varius quis pharetra quis, tempus sit amet dolor. Fusce convallis consectetur lectus quis aliquet. Proin auctor arcu vel facilisis porta. Proin ultrices magna vehicula libero venenatis, ac finibus nisi sodales. Mauris porta luctus risus at pharetra. Aliquam velit augue, sollicitudin nec bibendum quis, luctus id augue.</p>
-                <p class="project-summary mauve200">Mauris pharetra ligula iaculis velit varius scelerisque. Vivamus pretium sapien nec quam auctor elementum. Nam tristique accumsan eros, at faucibus magna efficitur sit amet. Cras condimentum accumsan tellus, nec laoreet est lobortis vel. Maecenas aliquam sapien vel elit vestibulum pulvinar. Cras laoreet turpis odio, sed aliquam enim euismod eu. Etiam vestibulum ante nec leo interdum sagittis. Mauris non sodales orci. Nunc tincidunt gravida erat in dignissim.</p>
-                <p class="project-summary mauve200">Curabitur quis erat finibus, finibus lectus quis, laoreet magna. Phasellus vestibulum mauris sit amet nulla euismod lacinia non in tortor. Etiam ultricies arcu vel nisi molestie fringilla. Integer varius efficitur scelerisque. Suspendisse eu sodales quam. Aliquam scelerisque lobortis ultricies. Fusce vitae nibh ac dui interdum faucibus interdum vitae libero. Curabitur a varius turpis, vel rhoncus massa.</p>
-                <p class="project-summary mauve200">Nam vitae lectus convallis, aliquam lectus eget, consequat odio. Duis maximus lobortis fringilla. Proin tellus libero, elementum vitae efficitur at, placerat sed sapien. Curabitur bibendum risus in lorem consectetur varius. Phasellus iaculis tellus vitae aliquet condimentum. Nam condimentum vitae purus sit amet sodales. Suspendisse malesuada quis neque at tristique. Integer molestie lorem quis lorem fermentum vehicula. Nunc venenatis, metus id facilisis viverra, est tortor finibus ante, vel lacinia nisl elit sed diam. In lacinia, ante sit amet congue congue, eros dui luctus orci, et elementum nulla nibh in diam.</p>
+                <p class="project-summary mauve200">EcoWorld is a public listed Malaysian company that prioritises sustainable eco-friendly land development. They were awarded as one of the Top 10 Developers at The Edge Malaysia with a diverse portfolio of beautiful townships, business hubs as well as residential titles for both strata and landed properties.</p>
+                <p class="project-summary mauve200">The project was to create a fun and interactive report for the first quarter of the financial year of 2022 (1Q FY2022). The primary intent of the document was for it to be circulated to shareholders via social chatting platforms such as WhatsApp and Telegram. The report was intended to be a quick overview or a brief summary of the first quarter of 2022. The illustrated buttons are hyperlinked to promotional videos and the full text report. Content with the result, we were later engaged for a set of Facebook posts in the same manner.</p>
             </div>
         </div>
     </div>
